// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar props should render 'buffer' 1`] = `
<div
  class="progress w-full relative cursor-pointer"
  id="progress-bar"
>
  <input
    aria-hidden="true"
    max="10000"
    min="0"
    tabindex="-1"
    type="range"
  />
  <span
    class="progress-range block absolute w-full left-0 pointer-events-none"
    style="background-color: rgb(255, 255, 255);"
  />
  
  <span
    aria-hidden="true"
    class="progress-buffer"
    style="left: 0%; width: 10%; background-color: rgba(255, 255, 255, 0.5);"
    tabindex="-1"
  />
  <span
    aria-hidden="true"
    class="progress-buffer"
    style="left: 50%; width: 10%; background-color: rgba(255, 255, 255, 0.5);"
    tabindex="-1"
  />
  
  
  
  <div
    class="chapters-progress"
  >
    
    
  </div>
  <span
    aria-hidden="true"
    class="ghost-thumb absolute hidden border-transparent border bg-opacity-75 pointer-events-none"
    style="display: none; left: 0%; background-color: rgba(255, 255, 255, 0.8); border-color: #a00;"
  />
  <span
    aria-hidden="true"
    class="progress-thumb absolute border border-solid pointer-events-none"
    style="display: block; left: 0%; background-color: rgb(255, 255, 255); border-color: #a00;"
    tabindex="-1"
  />
  <input
    class="sr-only"
    max="100"
    min="0"
    steps="1"
    title=""
    type="range"
  />
</div>
`;

exports[`ProgressBar props should render 'chapters' 1`] = `
<div
  class="progress w-full relative cursor-pointer"
  id="progress-bar"
>
  <input
    aria-hidden="true"
    max="10000"
    min="0"
    tabindex="-1"
    type="range"
  />
  <span
    class="progress-range block absolute w-full left-0 pointer-events-none"
    style="background-color: rgb(255, 255, 255);"
  />
  
  
  
  
  <div
    class="chapters-progress"
  >
    
    <span
      aria-hidden="true"
      class="absolute pointer-events-none"
      data-test="progress-bar--chapter-progress--indicator"
      style="border-right: 2px solid #a00; height: 2px; background: transparent; top: calc(50% - 1px);"
      tabindex="-1"
    />
    <span
      aria-hidden="true"
      class="absolute pointer-events-none"
      data-test="progress-bar--chapter-progress--indicator"
      style="border-right: 2px solid #a00; height: 2px; background: transparent; top: calc(50% - 1px);"
      tabindex="-1"
    />
    
  </div>
  <span
    aria-hidden="true"
    class="ghost-thumb absolute hidden border-transparent border bg-opacity-75 pointer-events-none"
    style="display: none; left: 0%; background-color: rgba(255, 255, 255, 0.8); border-color: #a00;"
  />
  <span
    aria-hidden="true"
    class="progress-thumb absolute border border-solid pointer-events-none"
    style="display: block; left: 0%; background-color: rgb(255, 255, 255); border-color: #a00;"
    tabindex="-1"
  />
  <input
    class="sr-only"
    max="100"
    min="0"
    steps="1"
    title=""
    type="range"
  />
</div>
`;

exports[`ProgressBar props should render 'ghost' 1`] = `
<div
  class="progress w-full relative cursor-pointer"
  id="progress-bar"
>
  <input
    aria-hidden="true"
    max="10000"
    min="0"
    tabindex="-1"
    type="range"
  />
  <span
    class="progress-range block absolute w-full left-0 pointer-events-none"
    style="background-color: rgb(255, 255, 255);"
  />
  
  
  
  
  <div
    class="chapters-progress"
  >
    
    
  </div>
  <span
    aria-hidden="true"
    class="ghost-thumb absolute hidden border-transparent border bg-opacity-75 pointer-events-none"
    style="display: block; left: 0.3%; background-color: rgba(255, 255, 255, 0.8); border-color: #a00;"
  />
  <span
    aria-hidden="true"
    class="progress-thumb absolute border border-solid pointer-events-none"
    style="display: block; left: 0%; background-color: rgb(255, 255, 255); border-color: #a00;"
    tabindex="-1"
  />
  <input
    class="sr-only"
    max="100"
    min="0"
    steps="1"
    title=""
    type="range"
  />
</div>
`;

exports[`ProgressBar props should render 'highlightColor' 1`] = `
<div
  class="progress w-full relative cursor-pointer"
  id="progress-bar"
>
  <input
    aria-hidden="true"
    max="10000"
    min="0"
    tabindex="-1"
    type="range"
  />
  <span
    class="progress-range block absolute w-full left-0 pointer-events-none"
    style="background-color: rgb(255, 255, 255);"
  />
  
  
  
  
  <div
    class="chapters-progress"
  >
    
    
  </div>
  <span
    aria-hidden="true"
    class="ghost-thumb absolute hidden border-transparent border bg-opacity-75 pointer-events-none"
    style="display: none; left: 0%; background-color: rgba(255, 255, 255, 0.8); border-color: #fff;"
  />
  <span
    aria-hidden="true"
    class="progress-thumb absolute border border-solid pointer-events-none"
    style="display: block; left: 0%; background-color: rgb(255, 255, 255); border-color: #fff;"
    tabindex="-1"
  />
  <input
    class="sr-only"
    max="100"
    min="0"
    steps="1"
    title=""
    type="range"
  />
</div>
`;

exports[`ProgressBar props should render 'progressColor' 1`] = `
<div
  class="progress w-full relative cursor-pointer"
  id="progress-bar"
>
  <input
    aria-hidden="true"
    max="10000"
    min="0"
    tabindex="-1"
    type="range"
  />
  <span
    class="progress-range block absolute w-full left-0 pointer-events-none"
    style="background-color: rgb(255, 255, 255);"
  />
  
  
  
  
  <div
    class="chapters-progress"
  >
    
    
  </div>
  <span
    aria-hidden="true"
    class="ghost-thumb absolute hidden border-transparent border bg-opacity-75 pointer-events-none"
    style="display: none; left: 0%; background-color: rgba(255, 255, 255, 0.8); border-color: #a00;"
  />
  <span
    aria-hidden="true"
    class="progress-thumb absolute border border-solid pointer-events-none"
    style="display: block; left: 0%; background-color: rgb(255, 255, 255); border-color: #a00;"
    tabindex="-1"
  />
  <input
    class="sr-only"
    max="100"
    min="0"
    steps="1"
    title=""
    type="range"
  />
</div>
`;

exports[`ProgressBar props should render 'quantiles' 1`] = `
<div
  class="progress w-full relative cursor-pointer"
  id="progress-bar"
>
  <input
    aria-hidden="true"
    max="10000"
    min="0"
    tabindex="-1"
    type="range"
  />
  <span
    class="progress-range block absolute w-full left-0 pointer-events-none"
    style="background-color: rgb(255, 255, 255);"
  />
  
  
  
  <span
    aria-hidden="true"
    class="progress-track block absolute left-0 pointer-events-none"
    style="left: 0%; width: 3%; background-color: rgb(255, 255, 255);"
    tabindex="-1"
  />
  <span
    aria-hidden="true"
    class="progress-track block absolute left-0 pointer-events-none"
    style="left: 55%; width: 5%; background-color: rgb(255, 255, 255);"
    tabindex="-1"
  />
  
  <div
    class="chapters-progress"
  >
    
    
  </div>
  <span
    aria-hidden="true"
    class="ghost-thumb absolute hidden border-transparent border bg-opacity-75 pointer-events-none"
    style="display: none; left: 0%; background-color: rgba(255, 255, 255, 0.8); border-color: #a00;"
  />
  <span
    aria-hidden="true"
    class="progress-thumb absolute border border-solid pointer-events-none"
    style="display: block; left: 0%; background-color: rgb(255, 255, 255); border-color: #a00;"
    tabindex="-1"
  />
  <input
    class="sr-only"
    max="100"
    min="0"
    steps="1"
    title=""
    type="range"
  />
</div>
`;

exports[`ProgressBar props should render 'thumbColor' 1`] = `
<div
  class="progress w-full relative cursor-pointer"
  id="progress-bar"
>
  <input
    aria-hidden="true"
    max="10000"
    min="0"
    tabindex="-1"
    type="range"
  />
  <span
    class="progress-range block absolute w-full left-0 pointer-events-none"
    style="background-color: rgb(255, 255, 255);"
  />
  
  
  
  
  <div
    class="chapters-progress"
  >
    
    
  </div>
  <span
    aria-hidden="true"
    class="ghost-thumb absolute hidden border-transparent border bg-opacity-75 pointer-events-none"
    style="display: none; left: 0%; background-color: rgba(255, 255, 255, 0.8); border-color: #a00;"
  />
  <span
    aria-hidden="true"
    class="progress-thumb absolute border border-solid pointer-events-none"
    style="display: block; left: 0%; background-color: rgb(255, 255, 255); border-color: #a00;"
    tabindex="-1"
  />
  <input
    class="sr-only"
    max="100"
    min="0"
    steps="1"
    title=""
    type="range"
  />
</div>
`;

exports[`ProgressBar props should render 'time' 1`] = `
<div
  class="progress w-full relative cursor-pointer"
  id="progress-bar"
>
  <input
    aria-hidden="true"
    max="10000"
    min="0"
    tabindex="-1"
    type="range"
  />
  <span
    class="progress-range block absolute w-full left-0 pointer-events-none"
    style="background-color: rgb(255, 255, 255);"
  />
  
  
  
  
  <div
    class="chapters-progress"
  >
    
    
  </div>
  <span
    aria-hidden="true"
    class="ghost-thumb absolute hidden border-transparent border bg-opacity-75 pointer-events-none"
    style="display: none; left: 0%; background-color: rgba(255, 255, 255, 0.8); border-color: #a00;"
  />
  <span
    aria-hidden="true"
    class="progress-thumb absolute border border-solid pointer-events-none"
    style="display: block; left: 50%; background-color: rgb(255, 255, 255); border-color: #a00;"
    tabindex="-1"
  />
  <input
    class="sr-only"
    max="100"
    min="0"
    steps="1"
    title=""
    type="range"
  />
</div>
`;

exports[`ProgressBar props should render 'title' 1`] = `
<div
  class="progress w-full relative cursor-pointer"
  id="progress-bar"
>
  <input
    aria-hidden="true"
    max="10000"
    min="0"
    tabindex="-1"
    type="range"
  />
  <span
    class="progress-range block absolute w-full left-0 pointer-events-none"
    style="background-color: rgb(255, 255, 255);"
  />
  
  
  
  
  <div
    class="chapters-progress"
  >
    
    
  </div>
  <span
    aria-hidden="true"
    class="ghost-thumb absolute hidden border-transparent border bg-opacity-75 pointer-events-none"
    style="display: none; left: 0%; background-color: rgba(255, 255, 255, 0.8); border-color: #a00;"
  />
  <span
    aria-hidden="true"
    class="progress-thumb absolute border border-solid pointer-events-none"
    style="display: block; left: 0%; background-color: rgb(255, 255, 255); border-color: #a00;"
    tabindex="-1"
  />
  <input
    class="sr-only"
    max="100"
    min="0"
    steps="1"
    title="title"
    type="range"
  />
</div>
`;

exports[`ProgressBar props should render with default props 1`] = `
<div
  class="progress w-full relative cursor-pointer"
  id="progress-bar"
>
  <input
    aria-hidden="true"
    max="0"
    min="0"
    tabindex="-1"
    type="range"
  />
  <span
    class="progress-range block absolute w-full left-0 pointer-events-none"
    style="background-color: rgb(255, 255, 255);"
  />
  
  
  
  
  <div
    class="chapters-progress"
  >
    
    
  </div>
  <span
    aria-hidden="true"
    class="ghost-thumb absolute hidden border-transparent border bg-opacity-75 pointer-events-none"
    style="display: none; left: 100%; background-color: rgba(255, 255, 255, 0.8); border-color: #a00;"
  />
  <span
    aria-hidden="true"
    class="progress-thumb absolute border border-solid pointer-events-none"
    style="display: block; left: 100%; background-color: rgb(255, 255, 255); border-color: #a00;"
    tabindex="-1"
  />
  <input
    class="sr-only"
    max="100"
    min="0"
    steps="1"
    title=""
    type="range"
  />
</div>
`;
